--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,7 +6,7 @@
 
 .footer-left {
   flex: 1;
-  padding-left: 1rem;
+  padding-left: 2rem;
 }
 
 .footer-center {
@@ -22,19 +22,26 @@
 
 .contact-info {
   padding-top: 0.6rem;
+  display: flex;
+  gap: 1rem;
 }
 
 .payment {
   height: 40%;
   width: 70%;
+  padding-top: 1rem;
 }
 
 .social-container {
   display: flex;
   gap: 2rem;
-  padding-top: 1rem;
+  padding-top: 2rem;
   font-size: larger;
   color: white !important;
+}
+
+.footer-left-desc {
+  padding-top: 1rem;
 }
 
 .social-icon {
