changed login css

--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -35,7 +35,7 @@
   margin: 0 0 1rem;
 }
 
-.input-box input {
+.login-wrapper .input-box input {
   width: 100%;
   height: 100%;
   background: transparent;
@@ -46,7 +46,13 @@
   color: #fff;
 }
 
-.input-box input::placeholder {
+.login-wrapper .input-box input:focus {
+  border-color: rgb(220, 75, 3);
+  color: white;
+  outline: none;
+}
+
+.login-wrapper .input-box input::placeholder {
   color: #fff;
   padding-left: 1rem;
 }
