--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -84,6 +84,22 @@
   color: #055c68;
 }
 
-.cart-container:hover {
-  color: #055c68;
+.navbar-right-item {
+  position: relative;
+}
+
+.cart-badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: #055c68;
+  color: white;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  font-weight: bold;
 }
