--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,14 +2,13 @@
   display: flex;
   align-items: center;
   text-align: center;
-  height: 8vh;
-  font-size: 10px;
+  font-size: 0.6rem;
   justify-content: space-around;
-  margin-top: 2.1rem;
   width: 100%;
   background-color: #e1fbff;
   position: sticky;
-  top: 7vh;
+  height: 9vh;
+  top: 0;
   z-index: 400;
 }
 
@@ -19,17 +18,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  max-width: 300px;
   padding-left: 1rem;
 }
 
 .navbar-input {
   width: 100%;
-  padding: 8px 33px 8px 15px;
-  font-size: 16px;
+  padding: 0.3rem 1.2rem 0.3rem 0.5rem;
+  font-size: 1rem;
   border: 1px solid #ccc;
-  border-radius: 20px;
+  border-radius: 1.2rem;
   outline: none;
   transition: 0.3s ease;
 }
@@ -42,8 +39,8 @@
 .navbar-icon {
   cursor: pointer;
   position: absolute;
-  right: 10px;
-  font-size: 20px;
+  right: 0.6rem;
+  font-size: 1.2rem;
   color: #aaa;
   pointer-events: none;
 }
@@ -55,7 +52,7 @@
 }
 
 .navbar-logo {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 
@@ -64,7 +61,7 @@
   justify-content: flex-end;
   gap: 1rem;
   flex: 1;
-  font-size: 15px;
+  font-size: 1rem;
   color: #21a5b7;
   cursor: pointer;
   font-weight: 500;
@@ -72,7 +69,7 @@
 }
 
 .navbar-right-button {
-  font-size: 14px;
+  font-size: 0.8rem;
   color: #21a5b7;
   cursor: pointer;
   font-weight: 600;
@@ -90,16 +87,16 @@
 
 .cart-badge {
   position: absolute;
-  top: -5px;
-  right: -5px;
+  top: -0.3rem;
+  right: -0.3rem;
   background-color: #055c68;
   color: white;
   border-radius: 50%;
-  width: 15px;
-  height: 15px;
+  width: 0.9rem;
+  height: 0.9rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  font-size: 0.7rem;
   font-weight: bold;
 }
