--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -50,7 +50,7 @@
   align-items: center;
   justify-content: center;
   z-index: 2;
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   border-radius: 50%;
 }
