--- a/src/components/newsletter/NewsLetter.css
+++ b/src/components/newsletter/NewsLetter.css
@@ -8,22 +8,22 @@
 }
 
 .newsletter-title {
-  font-size: 70px;
-  margin-bottom: 20px;
+  font-size: 4.3rem;
+  margin-bottom: 1.2rem;
   color: #21a5b7;
 }
 
 .newsletter-desc {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 300;
-  margin-bottom: 20px;
+  margin-bottom: 1.2rem;
   text-align: center;
   color: #21a5b7;
 }
 
 .input-container {
   width: 50%;
-  height: 40px;
+  height: 2.5rem;
   background-color: white;
   display: flex;
   justify-content: space-between;
@@ -31,10 +31,10 @@
 }
 
 .newsletter-input {
-  font-size: 18px;
+  font-size: 1.1rem;
   border: 1px solid lightgray;
   flex: 8;
-  padding-left: 20px;
+  padding-left: 1.2rem;
   transition: border-color 0.3s ease;
 }
 
@@ -57,5 +57,5 @@
 }
 
 .newsletter-button .icon {
-  font-size: 24px;
+  font-size: 1.5rem;
 }
