--- a/src/components/products/Products.css
+++ b/src/components/products/Products.css
@@ -7,12 +7,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 10px;
+  gap: 0.6rem;
 }
 
 .product-container {
-  min-width: calc(25% - 20px);
-  height: 350px;
+  min-width: calc(25% - 1.2rem);
+  height: 21.8rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@
 
 .product-info .icon {
   border: none;
-  padding: 10px;
+  padding: 0.6rem;
   background-color: #21a5b7;
   color: white;
   cursor: pointer;
