--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -4,11 +4,12 @@
   display: flex;
   overflow: hidden;
   position: relative;
+  margin-top: 4rem;
 }
 
 .arrow {
-  width: 50px;
-  height: 50px;
+  width: 3.1rem;
+  height: 3.1rem;
   color: #21a5b7;
   display: flex;
   align-items: center;
@@ -27,15 +28,15 @@
 }
 
 .arrow[direction="left"] {
-  left: 10px;
+  left: 0.6rem;
 }
 
 .arrow[direction="right"] {
-  right: 10px;
+  right: 0.6rem;
 }
 
 .arrow .icon {
-  font-size: 32px;
+  font-size: 2rem;
 }
 
 .slider-wrapper {
@@ -62,20 +63,20 @@
 
 .info-container {
   flex: 1;
-  padding: 50px;
+  padding: 3.1rem;
 }
 
 .title {
-  font-size: 45px;
+  font-size: 2.8rem;
   text-transform: uppercase;
   color: #21a5b7;
 }
 
 .desc {
-  margin: 30px 0px;
-  font-size: 14px;
+  margin: 1.8rem 0;
+  font-size: 0.8rem;
   font-weight: 500;
-  letter-spacing: 3px;
+  letter-spacing: 0.1rem;
   text-transform: uppercase;
   color: grey;
 }
