--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -10,19 +10,19 @@
 }
 
 .login-wrapper {
-  width: 300px;
+  width: 18.7rem;
   height: 70vh;
   background: transparent;
   border: 2px solid rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(30px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.2);
   color: white;
-  border-radius: 10px;
-  padding: 30px 40px;
+  border-radius: 0.6rem;
+  padding: 1.8rem 2.5rem;
 }
 
 .login-wrapper h2 {
-  font-size: 24px;
+  font-size: 1.5rem;
   text-align: center;
   padding-bottom: 2rem;
 }
@@ -30,7 +30,7 @@
 .login-wrapper .input-box {
   position: relative;
   width: 100%;
-  height: 40px;
+  height: 2.5rem;
   padding: 0 0 1rem;
   margin: 0 0 1rem;
 }
@@ -41,8 +41,8 @@
   background: transparent;
   outline: none;
   border: 2px solid rgba(255, 255, 255, 0.2);
-  border-radius: 40px;
-  font-size: 16px;
+  border-radius: 2.5rem;
+  font-size: 1rem;
   color: #fff;
 }
 
@@ -54,7 +54,7 @@
 .login-wrapper .remember-forgot {
   display: flex;
   justify-content: space-between;
-  font-size: 15px;
+  font-size: 0.9rem;
   margin-top: 2rem;
 }
 
@@ -73,15 +73,15 @@
 
 .login-wrapper button {
   width: 100%;
-  height: 30px;
+  height: 1.8rem;
   margin-top: 2rem;
   background: #fff;
   border: none;
   outline: none;
-  border-radius: 40px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 2.5rem;
+  box-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.1);
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1rem;
   color: #333;
   font-weight: 700;
 }
@@ -91,7 +91,7 @@
 }
 
 .login-wrapper .register-link {
-  font-size: 15px;
+  font-size: 0.9rem;
   text-align: center;
   margin-top: 2rem;
 }
